<resources>
    <string name="app_name">Inna Cafe-Shop</string>

    //Toolbar Strings
    <string name="toolbar_welcome">Willkommen</string>
    <string name="toolbar_specials">Specials</string>
    <string name="price_list">Preisliste</string>
    <string name="social">Socials</string>
    <string name="panorama_blick">Panoramablick</string>


    <string name="drinks">Drinks</string>
    <string name="smoothies">Smoothies</string>
    <string name="inna_s_kaffee_shop">Inna\'s Kaffee-Shop</string>
    <string name="back_button">string</string>
    <string name="robusta_caffe_moers">Robusta caffe`Moers</string>

    <string name="willkommen">Willkommen</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moers">Moers</string>
    <string name="Moers">Moers</string>
    <string name="cafe_bar">Cafe-Bar</string>
    <string name="klassiker">Klassiker</string>
    <string name="spezialit_ten">Spezialitäten</string>
    <string name="robusta">Robusta</string>
    <string name="preisliste">Preisliste</string>
    <string name="specials">Specials</string>
    <string name="special">Special</string>

    <string name="espresso_italiano">Espresso Italiano</string>
    <string name="seine_wurzel_hat_der_espresso_in_italien">Seine Wurzel hat der Espresso in Italien.</string>
    <string name="wo_diese_art_der_kaffeezubereitung_um_1900_in_mailand_aufkam">Wo diese Art der Kaffeezubereitung um 1900 in Mailand aufkam.</string>
    <string name="numero_1">Numero 1</string>
    <string name="home">Home</string>

    <string name="socialmedia">Socialmedia</string>
    <string name="tiktok">TikTok</string>
    <string name="instag">InstaG</string>
    <string name="social_media">Social Media</string>
    <string name="instagram">Instagram</string>

    <string name="code_scannen">Code scannen</string>
    <string name="du_bist_angemeldet">Du bist angemeldet</string>
    <string name="los_geht">Los geht</string>
    <string name="los_geht_s">Los_geht\'s</string>
    <string name="skip">Skip</string>
    <string name="drawer">Drawer</string>
    <string name="inna_s_cafe_shop">Inna\'s-Cafe-Shop</string>
    <string name="zur_ck">Zurück</string>
    <string name="registrieren">Registrieren</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="toast_name">Toast text</string>
    <string name="todo">TODO</string>


</resources>