<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/casaFragment"
        android:icon="@drawable/baseline_home_24"
        android:iconTint="@color/white"
        android:title="@string/home" />

    <item
        android:id="@+id/sortimentFragment"
        android:icon="@drawable/baseline_coffee_24"
        android:iconTint="@color/white"
        android:title="@string/specials"/>

    <item
        android:id="@+id/moneyFragment"
        android:icon="@drawable/baseline_euro_24"
        android:iconTint="@color/white"
        android:title="@string/preisliste"/>

    <item
        android:id="@+id/socialFragment"
        android:icon="@drawable/baseline_mood_24"
        android:iconTint="@color/white"
        android:title="@string/socialmedia"/>

</menu>